# option-replay-report-engine

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: assumptions.md  research_context.md
src/option_replay_report_engine/: __init__.py
tests/: test_replay.py
