[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "option-replay-report-engine"
version = "0.1.0"
description = "Deterministic option replay reports with PnL attribution, liquidity checks, and evidence-gated verdicts."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Shaw Signal Dev" }]
keywords = ["options", "quant", "backtesting", "pnl", "microstructure"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
